force-app/main/default/objects/Project_Application__c/Project_Application__c.object-meta.xml
<CustomObject>
    <description>Applications related to Inspire Planner projects</description>
    <label>Project Application</label>
    <nameField>
        
        <displayFormat>Ap-{00000}</displayFormat>
        
        <label>Application</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Project Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>