force-app/main/default/objects/Project_Application__c/fields/Anti_Islanding__c.field-meta.xml
<CustomField>
    <fullName>Anti_Islanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anti-Islanding</label>
    <type>Checkbox</type>
</CustomField>