force-app/main/default/objects/Project_Application__c/fields/App_ID_W0__c.field-meta.xml
<CustomField>
    <fullName>App_ID_W0__c</fullName>
    <description>The application number assigned by the utility</description>
    <label>App ID#/W0#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>