force-app/main/default/objects/Project_Application__c/fields/App_Iteration__c.field-meta.xml
<CustomField>
    <fullName>App_Iteration__c</fullName>
    <description>For each application type, the application may be submitted multiple times.</description>
    <label>App Iteration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
                <default>true</default>
                <label>Original</label>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Fifth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>