force-app/main/default/objects/Project_Application__c/fields/Derating_Letter__c.field-meta.xml
<CustomField>
    <fullName>Derating_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Derating Letter</label>
    <type>Checkbox</type>
</CustomField>