force-app/main/default/objects/Project_Application__c/fields/ESS_Duration__c.field-meta.xml
<CustomField>
    <fullName>ESS_Duration__c</fullName>
    <label>ESS Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>