force-app/main/default/objects/Project_Application__c/fields/ESS_Make__c.field-meta.xml
<CustomField>
    <fullName>ESS_Make__c</fullName>
    <label>ESS Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>