force-app/main/default/objects/Project_Application__c/fields/ESS_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>ESS_Manufacturer__c</fullName>
    <label>ESS Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>