force-app/main/default/objects/Project_Application__c/fields/ESS_Size__c.field-meta.xml
<CustomField>
    <fullName>ESS_Size__c</fullName>
    <label>ESS Size (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>