force-app/main/default/objects/Project_Application__c/fields/Exhibit_C_IX_Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_C_IX_Service_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit C - IX Service Agreement</label>
    <type>Checkbox</type>
</CustomField>