force-app/main/default/objects/Project_Application__c/fields/Inverter_Make__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Make__c</fullName>
    <label>Inverter Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>