force-app/main/default/objects/Project_Application__c/fields/Inverter_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Manufacturer__c</fullName>
    <label>Inverter Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>