force-app/main/default/objects/Project_Application__c/fields/Inverter_Size__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Size__c</fullName>
    <label>Inverter Size (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>