force-app/main/default/objects/Project_Application__c/fields/IX_Application_Deemed_Complete_Act__c.field-meta.xml
<CustomField>
    <fullName>IX_Application_Deemed_Complete_Act__c</fullName>
    <label>IX Application Deemed Complete Act</label>
    <type>Date</type>
</CustomField>