force-app/main/default/objects/Project_Application__c/fields/IX_Application_Deemed_Complete_Est__c.field-meta.xml
<CustomField>
    <fullName>IX_Application_Deemed_Complete_Est__c</fullName>
    <inlineHelpText>Enter the estimated date that IX Application will be complete</inlineHelpText>
    <label>IX Application Deemed Complete Est</label>
    <type>Date</type>
</CustomField>