force-app/main/default/objects/Project_Application__c/fields/IX_Application_Receipt_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>IX_Application_Receipt_Confirmed__c</fullName>
    <inlineHelpText>Enter date IX Application Receipt is confirmed</inlineHelpText>
    <label>IX Application Receipt Confirmed</label>
    <type>Date</type>
</CustomField>