force-app/main/default/objects/Project_Application__c/fields/IX_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>IX_Application_Submitted__c</fullName>
    <inlineHelpText>Enter date IX Application was submitted</inlineHelpText>
    <label>IX Application Submitted</label>
    <type>Date</type>
</CustomField>