force-app/main/default/objects/Project_Application__c/fields/One_Line__c.field-meta.xml
<CustomField>
    <fullName>One_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One-Line</label>
    <type>Checkbox</type>
</CustomField>