force-app/main/default/objects/Project_Application__c/fields/Site_Plan__c.field-meta.xml
<CustomField>
    <fullName>Site_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Plan</label>
    <type>Checkbox</type>
</CustomField>