force-app/main/default/objects/Project_Application__c/fields/Storage_Form__c.field-meta.xml
<CustomField>
    <fullName>Storage_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storage Form</label>
    <type>Checkbox</type>
</CustomField>