force-app/main/default/objects/Project_Application__c/fields/Tech_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sheets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inverter and Battery Cut Sheet, Anti-Islanding Letter, LROV, Inverter Derating Letter</inlineHelpText>
    <label>Tech Sheets</label>
    <type>Checkbox</type>
</CustomField>