force-app/main/default/objects/Project_Application__c/fields/Wildcard_Sort__c.field-meta.xml
<CustomField>
    <fullName>Wildcard_Sort__c</fullName>
    <inlineHelpText>This field us used for ad hoc sorting and filtering. If it is reused for the same task more than a couple of times, consider requesting a new field.</inlineHelpText>
    <label>Wildcard Sort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>